[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
common = { path = "crates/common", package = "fe-common" }
driver = { path = "crates/driver", package = "fe-driver" }
hir = { path = "crates/hir", package = "fe-hir" }
hir-analysis = { path = "crates/hir-analysis", package = "fe-hir-analysis" }
parser = { path = "crates/parser", package = "fe-parser" }
test-utils = { path = "crates/test-utils", package = "fe-test-utils" }
resolver = { path = "crates/resolver", package = "fe-resolver" }

camino = "1.1.9"
clap = { version = "4.5.26", features = ["derive"] }
codespan-reporting = "0.11"
derive_more = { version = "1.0", default-features = false, features = [
    "from",
    "try_into",
] }
dir-test = "0.4"
rustc-hash = "2.1.0"
num-bigint = "0.4"
paste = "1.0.15"
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "a89e3d23574f3749847b8b5cab0a8d79567214ed" }
smallvec = { version = "2.0.0-alpha.10" }
wasm-bindgen-test = "0.3"
glob = "0.3.2"
semver = "1.0.24"

[profile.dev]
# Set to 0 to make the build faster and debugging more difficult.
debug = 1
