[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
common = { path = "crates/common", package = "fe-common" }
driver = { path = "crates/driver", package = "fe-driver" }
hir = { path = "crates/hir", package = "fe-hir" }
hir-analysis = { path = "crates/hir-analysis", package = "fe-hir-analysis" }
parser = { path = "crates/parser", package = "fe-parser" }
test-utils = { path = "crates/test-utils", package = "fe-test-utils" }
resolver = { path = "crates/resolver", package = "fe-resolver" }

url = "2.5.4"
camino = "1.1.9"
clap = { version = "4.5.26", features = ["derive"] }
codespan-reporting = "0.11"
derive_more = { version = "1.0", default-features = false, features = [
    "from",
    "try_into",
] }
dir-test = "0.4"
glob = "0.3.2"
rustc-hash = "2.1.0"
num-bigint = "0.4"
paste = "1.0.15"
salsa = "0.20"
smallvec = { version = "2.0.0-alpha.10" }
smallvec1 = { version = "1", package = "smallvec" }
thin-vec = "0.2.14"
smol_str = { version = "0.1", features = ["serde"] }
serde-semver = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.4.0"
wasm-bindgen-test = "0.3"
semver = "1.0.26"

[profile.dev]
# Set to 0 to make the build faster and debugging more difficult.
debug = 1
