[package]
name = "fe-analyzer"
version = "0.4.0-alpha"
authors = ["Ethereum Foundation <snakecharmers@ethereum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe-common = {path = "../common", version = "^0.4.0-alpha"}
fe-parser = {path = "../parser", version = "^0.4.0-alpha"}
hex = "0.4"
ansi_term = "0.12.1"
num-bigint = "0.3.1"
strum = { version = "0.20.0", features = ["derive"] }
lexical-core = "0.7.6"

[dev-dependencies]
insta = "1.7.1"
rstest = "0.6.4"