[package]
name = "fe-analyzer"
version = "0.6.1-alpha"
authors = ["Ethereum Foundation <snakecharmers@ethereum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe-common = {path = "../common", version = "^0.6.1-alpha"}
fe-parser = {path = "../parser", version = "^0.6.1-alpha"}
hex = "0.4"
ansi_term = "0.12.1"
num-bigint = "0.3.1"
num-traits = "0.2.14"
strum = { version = "0.20.0", features = ["derive"] }
vec1 = "1.8.0"
semver = "1.0.0"
salsa = "0.16.1"
indexmap = "1.6.2"

[dev-dependencies]
insta = "1.7.1"
rstest = "0.6.4"
