[package]
name = "fe-common"
version = "0.5.0-alpha"
authors = ["Ethereum Foundation <snakecharmers@ethereum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
codespan-reporting = "0.11.1"
serde = { version = "1", features = ["derive"] }
ron = "0.5.1"
difference = "2.0"
num-traits = "0.2.14"
