[package]
name = "vyper-compiler"
version = "0.1.0"
authors = ["Grant Wuerker <gwuerker@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ethereum/rust-vyper"
description = "Compiler lib for Rust Vyper."

[dependencies]
vyper-parser = {path = "../parser", version = "0.1.0"}
serde_json = "1.0"
serde = "1.0"
hex = "0.4"
yultsur = { git = "https://github.com/g-r-a-n-t/yultsur" }
solc = { git = "https://github.com/spalladino/solc-rust", branch="feature/solc-0.6.2" }
ethabi = "11.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
stringreader = "0.1"

[dev-dependencies]
evm = "0.14"
primitive-types = "0.6"
evm-runtime = "0.14"
rand = "0.7.3"
