[package]
name = "fe-compiler"
version = "0.0.1"
authors = ["Grant Wuerker <gwuerker@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Compiler lib for the Fe language."

[features]
# Includes the solidity compiler for Yul -> bytecode compilation.
solc-backend = ["solc"]

[dependencies]
fe-parser = {path = "../parser", version = "0.0.1"}
fe-semantics = {path = "../semantics", version = "0.0.1"}
serde_json = "1.0"
serde = "1.0"
hex = "0.4"
# This fork contains the shorthand macros and some other necessary updates.
yultsur = { git = "https://github.com/g-r-a-n-t/yultsur" }
ethabi = "12.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
stringreader = "0.1"
# Optional
# This fork supports concurrent compilation, which is required for Rust tests.
solc = { git = "https://github.com/spalladino/solc-rust", branch = "feature/solc-0.6.2", optional = true }

[dev-dependencies]
evm-runtime = "0.18"
evm = "0.18"
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
rand = "0.7.3"
rstest = "0.6.4"
