[package]
authors = ["The Fe Developers"]
edition = "2018"
name = "fe-fuzzer"
publish = false
version = "0.4.0-alpha"

[package.metadata]
cargo-fuzz = true

[dependencies]
bincode = "1.3.3"
ethabi = "14.0"
fe-compiler-test-utils = {path = "../test-utils", version = "0.4.0-alpha"}
libfuzzer-sys = "0.4"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
doc = false
name = "erc20_target"
path = "fuzz_targets/erc20_target.rs"
test = false

[features]
solc-backend = ["fe-compiler-test-utils/solc-backend"]
