[package]
name = "vyper-parser"
version = "0.1.0"
authors = ["David Sanders <david@ethereum.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/davesque/rust-vyper"
description = "Parser lib for Rust Vyper."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde_json = "1"

[dev-dependencies]
difference = "2.0"
ron = "0.5.1"
serde_json = "1"
wasm-bindgen-test = "0.2"
