[package]
name = "fe-parser"
version = "0.5.0-alpha"
authors = ["David Sanders <david@ethereum.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Parser lib for Fe."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fe-common = {path = "../common", version = "^0.5.0-alpha"}
logos = { version = "0.11.4", default-features = false, features = ["export_derive"] }
serde = { version = "1", features = ["derive"] }
unescape = "0.1.0"
uuid = { version = "0.8", features = ["v4", "stdweb"] }
vec1 = { version = "1.8.0", features = ["serde"] }
if_chain = "1.0.1"
semver = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
insta = "1.7.1"
wasm-bindgen-test = "0.3"
