[package]
authors = ["SatyamAgrawal <satyam0499@gmail.com>"]
edition = "2018"
name = "fe-compiler-test-utils"
version = "0.4.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "12.0"
evm = "0.18"
evm-runtime = "0.18"
fe-common = {path = "../common", version = "0.4.0-alpha"}
fe-compiler = {path = "../compiler", features = ["solc-backend"], version = "0.4.0-alpha"}
hex = "0.4"
primitive-types = {version = "0.7", default-features = false, features = ["rlp"]}
serde_json = "1.0.64"
solc = {git = "https://github.com/g-r-a-n-t/solc-rust", optional = true}
stringreader = "0.1"
yultsur = {git = "https://github.com/g-r-a-n-t/yultsur"}

[features]
solc-backend = ["fe-compiler/solc-backend", "solc"]
