[package]
authors = ["The Fe Developers"]
edition = "2018"
name = "fe-compiler-test-utils"
version = "0.6.1-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "14.0"
evm = "0.26.0"
evm-runtime = "0.26.0"
fe-common = {path = "../common", version = "^0.6.1-alpha"}
fe-compiler = {path = "../compiler", version = "^0.6.1-alpha"}
hex = "0.4"
primitive-types = {version = "0.9", default-features = false, features = ["rlp"]}
serde_json = "1.0.64"
solc = {git = "https://github.com/g-r-a-n-t/solc-rust", optional = true}
stringreader = "0.1"
yultsur = {git = "https://github.com/g-r-a-n-t/yultsur"}

[features]
solc-backend = ["fe-compiler/solc-backend", "solc"]
