[package]
authors = ["SatyamAgrawal <satyam0499@gmail.com>"]
edition = "2018"
name = "fe-compiler-tests"
version = "0.3.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
evm = "0.18"
evm-runtime = "0.18"
fe-compiler = {path = "../compiler", features = ["solc-backend"]}
primitive-types = {version = "0.7", default-features = false, features = ["rlp"]}
rand = "0.7.3"
rstest = "0.6.4"
# This fork contains the shorthand macros and some other necessary updates.
ethabi = "12.0"
fe-analyzer = {path = "../analyzer", version = "^0.3.0-alpha"}
fe-common = {path = "../common", version = "^0.3.0-alpha"}
fe-compiler-test-utils = {path = "../test-utils", features = ["solc-backend"]}
stringreader = "0.1"
yultsur = {git = "https://github.com/g-r-a-n-t/yultsur"}

[features]
solc-backend = ["fe-compiler/solc-backend"]
