[package]
authors = ["SatyamAgrawal <satyam0499@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "fe-compiler-tests"
version = "0.6.1-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe-compiler = {path = "../compiler"}
# This fork contains the shorthand macros and some other necessary updates.
ethabi = "14.0"
evm = "0.26.0"
evm-runtime = "0.26.0"
fe-analyzer = {path = "../analyzer", version = "^0.6.1-alpha"}
fe-common = {path = "../common", version = "^0.6.1-alpha"}
fe-compiler-test-utils = {path = "../test-utils" }
fe-parser = {path = "../parser", version = "^0.6.1-alpha"}
hex = "0.4"
primitive-types = {version = "0.9", default-features = false, features = ["rlp"]}
rand = "0.7.3"
regex = "1.1.0"
rstest = "0.6.4"
stringreader = "0.1"
yultsur = {git = "https://github.com/g-r-a-n-t/yultsur"}

[dev-dependencies]
insta = "1.7.1"
pretty_assertions = "0.7.2"
wasm-bindgen-test = "0.3.24"

[features]
solc-backend = ["fe-compiler/solc-backend", "fe-compiler-test-utils/solc-backend"]
