[package]
name = "fe-analyzer"
version = "0.24.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"

[dependencies]

fe-common = {path = "../common", version = "^0.24.0"}
fe-parser = {path = "../parser", version = "^0.24.0"}
fe-library = {path = "../library", version = "^0.24.0"}
hex = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2.14"
strum = { version = "0.23.0", features = ["derive"] }
semver = "1.0.0"
salsa = "0.16.1"
parking_lot_core = { version = "=0.8.0" } # used by salsa; version pinned for wasm compatibility
indexmap = "1.6.2"
if_chain = "1.0.1"
smallvec = { version = "1.6.1", features = ["union"] }
petgraph = "0.6.0"
smol_str = "0.1.21"

[dev-dependencies]
insta = { default-features = false, version = "1.7.1" }
rstest = "0.6.4"
test-files = {path = "../test-files", package = "fe-test-files" }
tests = {path = "../tests", package = "fe-compiler-tests" }
fe-library = {path = "../library"}
wasm-bindgen-test = "0.3"
pretty_assertions = "1.0.0"
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
