[package]
name = "fe-bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { workspace = true }
walkdir = { workspace = true }

[dependencies]
hir-analysis.workspace = true
driver.workspace = true
parser.workspace = true
camino.workspace = true

[[bench]]
name = "analysis"
harness = false
