[package]
name = "fe-bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5"
walkdir = "2.4"

[dependencies]
driver.workspace = true
parser.workspace = true
common.workspace = true
camino.workspace = true
url.workspace = true
tracing.workspace = true

[[bench]]
name = "analysis"
harness = false
