[package]
name = "fe-codegen"
version = "0.14.0-alpha"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"

[dependencies]
fe-mir = { path = "../mir", version = "^0.14.0-alpha" }
fe-common = { path = "../common", version = "^0.14.0-alpha" }
fe-new_abi = { path = "../new_abi", version = "^0.14.0-alpha" }
salsa = "0.16.1"
fxhash = "0.2.1"
smol_str = "0.1.21"
yultsur = { git = "https://github.com/g-r-a-n-t/yultsur", rev = "ae85470" }