[package]
name = "fe-codegen"
version = "0.19.1-alpha"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"

[dependencies]
fe-analyzer = { path = "../analyzer", version = "^0.19.1-alpha"}
fe-mir = { path = "../mir", version = "^0.19.1-alpha"}
fe-common = { path = "../common", version = "^0.19.1-alpha"}
fe-abi = { path = "../abi", version = "^0.19.1-alpha"}
salsa = "0.16.1"
num-bigint = "0.4.3"
fxhash = "0.2.1"
smol_str = "0.1.21"
yultsur = { git = "https://github.com/g-r-a-n-t/yultsur", rev = "ae85470" }
