[package]
name = "fe-codegen"
version = "0.24.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"

[dependencies]
fe-analyzer = { path = "../analyzer", version = "^0.24.0"}
fe-mir = { path = "../mir", version = "^0.24.0"}
fe-common = { path = "../common", version = "^0.24.0"}
fe-abi = { path = "../abi", version = "^0.24.0"}
salsa = "0.16.1"
num-bigint = "0.4.3"
fxhash = "0.2.1"
indexmap = "1.6.2"
smol_str = "0.1.21"
yultsur = { git = "https://github.com/fe-lang/yultsur", rev = "ae85470" }
