[package]
name = "fe-common"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR definition and lowering for Fe lang."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
paste.workspace = true
salsa.workspace = true
serde-semver.workspace = true
smol_str.workspace = true
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing.workspace = true

parser.workspace = true
url.workspace = true
ordermap = "0.5.5"
rustc-hash.workspace = true
# blart = "0.3.0"
# imbl = "5.0.0"
# bimap = "0.6.3"
# patricia_tree = "0.9.0"
# pour = "0.2.1"
# qp-trie = "0.8.2"
radix_immutable = { version = "0.0.1", git = "https://github.com/micahscopes/radix_immutable.git" }
imbl = "5.0.0"
