[package]
name = "fe-common"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR definition and lowering for Fe lang."

[lib]
doctest = false

[dependencies]
camino.workspace = true
paste.workspace = true
salsa.workspace = true
serde-semver.workspace = true
smol_str.workspace = true
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
toml = "0.8.8"
tracing.workspace = true
petgraph.workspace = true

parser.workspace = true
url.workspace = true
ordermap = "0.5.5"
rustc-hash.workspace = true
radix_immutable = { version = "0.0.1", git = "https://github.com/micahscopes/radix_immutable.git" }
