[package]
name = "fe-driver"
version = "0.24.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ethereum/fe"

[features]
# Includes the solidity compiler for Yul -> bytecode compilation.
solc-backend = ["fe-yulc"]

[dependencies]
serde_json = "1.0"
fe-abi = {path = "../abi", version = "^0.24.0"}
fe-analyzer = {path = "../analyzer", version = "^0.24.0"}
fe-common = {path = "../common", version = "^0.24.0"}
fe-mir = {path = "../mir", version = "^0.24.0"}
fe-codegen = {path = "../codegen", version = "^0.24.0"}
fe-parser = {path = "../parser", version = "^0.24.0"}
fe-yulc = {path = "../yulc", version = "^0.24.0", features = ["solc-backend"], optional = true}
fe-test-runner = {path = "../test-runner", version = "^0.24.0"}
indexmap = "1.6.2"
vfs = "0.5.1"
smol_str = "0.1.21"
toml = "0.5.8"
