[package]
name = "fe-driver"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides Fe driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
clap.workspace = true
codespan-reporting.workspace = true
salsa.workspace = true
include_dir = "0.7"

common.workspace = true
hir.workspace = true
hir-analysis.workspace = true
resolver.workspace = true
