[package]
name = "fe-driver2"
version = "0.26.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides Fe driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "a1bf3a6" }
codespan-reporting = "0.11"

hir = { path = "../hir", package = "fe-hir" }
common = { path = "../common2", package = "fe-common2" }
hir-analysis = { path = "../hir-analysis", package = "fe-hir-analysis" }
resolver = { path = "../resolver", package = "fe-resolver" }
camino = "1.1.4"
clap = { version = "4.3", features = ["derive"] }
semver = "1.0.23"
walkdir = "2"
include_dir = "0.7"
dirs = "5.0.1"
serde = { version = "1", features = ["derive"] }
