[package]
name = "fe-driver2"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides Fe driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa.workspace = true
codespan-reporting = "0.11"

hir = { path = "../hir", package = "fe-hir" }
common = { path = "../common2", package = "fe-common2" }
hir-analysis = { path = "../hir-analysis", package = "fe-hir-analysis" }
camino = "1.1.4"
clap = { version = "4.3", features = ["derive"] }
