[package]
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]
description = "An implementation of the Fe smart contract language"
edition = "2021"
keywords = ["ethereum", "fe", "yul", "smart", "contract", "compiler"]
license = "GPL-3.0-or-later"
name = "fe"
readme = "README.md"
repository = "https://github.com/ethereum/fe"
version = "0.26.0"

[features]
solc-backend = ["fe-driver/solc-backend"]

[dependencies]
clap = {version="3.1.18", features = ["derive"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
url = "2"
fs_extra = "1.2.0"
walkdir = "2"
indexmap = "1.6.2"
include_dir = "0.7.2"
colored = "2.0.0"
fe-test-runner = {path = "../test-runner", version = "^0.26.0"}
fe-common = {path = "../common", version = "^0.26.0"}
fe-driver = {path = "../driver", version = "^0.26.0"}
fe-parser = {path = "../parser", version = "^0.26.0"}
