[package]
name = "fe"
version = "0.26.0"
edition = "2021"

[dependencies]
clap.workspace = true
driver.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
common.workspace = true
resolver.workspace = true
camino.workspace = true
hir-analysis.workspace = true
hir.workspace = true
url.workspace = true
smol_str.workspace = true

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
