[package]
name = "fevm"
version = "0.1.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ethereum/fe"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.1.0", default-features = false }
ethabi = "16.0.0"
hex = "0.4.3"
primitive-types = { version = "0.10.1", default-features = false, features = ["rlp"] }
serde_json = "1.0.74"
revm = {git = "https://github.com/bluealloy/revm"}
fe-common = {path = "../common", version = "^0.12.0-alpha"}
fe-driver = {path = "../driver", version = "^0.12.0-alpha"}
fe-yulgen = {path = "../yulgen", version = "^0.12.0-alpha"}
fe-yulc = {path = "../yulc", version = "^0.12.0-alpha", optional = true, features = ["solc-backend"]}
fe-analyzer = {path = "../analyzer", version = "^0.12.0-alpha"}
solc = {git = "https://github.com/g-r-a-n-t/solc-rust", rev = "da554b3", optional = true}
yultsur = {git = "https://github.com/g-r-a-n-t/yultsur", rev = "ae85470"}
indexmap = "1.6.2"
getrandom = { version = "0.2.3", features = ["js"] }

#revm = {git = "https://github.com/bluealloy/revm"}


[features]
solc-backend = ["fe-yulc", "solc", "fe-driver/solc-backend"]