[package]
name = "fe-hir-analysis"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR semantic analysis for Fe lang"

[dependencies]
bitflags = { workspace = true }
cranelift-entity = { workspace = true }
derive_more.workspace = true
either = { workspace = true }
ena = { workspace = true, features = ["persistent"] }
if_chain = { workspace = true }
itertools = { workspace = true }
num-bigint.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
smallvec2 = { workspace = true }

common.workspace = true
test-utils.workspace = true
hir.workspace = true

[dev-dependencies]
camino.workspace = true
codespan-reporting.workspace = true
dir-test.workspace = true
# TODO move cs diagnostics utils
driver.workspace = true
